sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return 2*getTrouBase()+getTrouPosition()
  ^